# barracuda_ws

./: .dockerignore  .env.template  .gitignore  .gitmodules  Dockerfile  README.md  ZED_Diagnostic_Results.json  barracuda_thermal_warning.md  docker-compose.yaml  entrypoint.sh
scripts/: compose-with-gui.sh
src/barracuda_360_sonar/: CMakeLists.txt  ROS2_MIGRATION.md  package.xml
src/barracuda_360_sonar/launch/: barracuda_360_sonar.launch.py
src/barracuda_360_sonar/ping360_node/: __init__.py  node.py
src/barracuda_360_sonar/scripts/: ping360_node.py
src/barracuda_camera/: CMakeLists.txt  README.md  package.xml
src/barracuda_camera/launch/: barracuda_camera.launch.py
src/barracuda_control/: CMakeLists.txt  README.md  package.xml
src/barracuda_control/config/: thruster_params.yaml
src/barracuda_control/launch/: barracuda_control.launch.py  joystick_pose_controller.launch.py  joystick_to_pose_wrapper.launch.py  joystick_wrench_controller.launch.py
src/barracuda_control/scripts/: joystick_to_pose.py  joystick_to_wrench.py
src/barracuda_data_tools/: package.xml  setup.cfg  setup.py
src/barracuda_data_tools/scripts/: recorder.py  start_system.sh
src/barracuda_description/: CMakeLists.txt  README.md  package.xml
src/barracuda_description/launch/: barracuda_description.launch.py
src/barracuda_description/meshes/: dvl.dae  zedm.dae
src/barracuda_description/urdf/: barracuda.urdf  barracuda.xacro  depth_camera.xacro  sensors.xacro  thruster_snippets.xacro
src/barracuda_dvl/: CMakeLists.txt  README.md  package.xml
src/barracuda_dvl/config/: dvl_params.yaml
src/barracuda_dvl/launch/: barracuda_dvl.launch.py
src/barracuda_dvl/scripts/: waterlinked_dvl_ros_driver.py
src/barracuda_dvl/test/: test_dvl.py
src/barracuda_estimation/: AGENTS.md  README.md  package.xml  setup.cfg  setup.py
src/barracuda_estimation/barracuda_estimation/: estimator_node.py  factor_graph.py  gtsam_estimator.py  icp_frontend.py  imu_buffer.py  measurement_types.py  state_estimate.py  zed_pose_graph_node.py
src/barracuda_estimation/config/: ekf_map.yaml  ekf_odom.yaml
src/barracuda_estimation/launch/: barracuda_estimation.launch.py
src/barracuda_estimation/resource/: barracuda_estimation
src/barracuda_estimation/test/: conftest.py  test_gtsam_estimator.py
src/barracuda_localization/: package.xml  setup.cfg  setup.py
src/barracuda_localization/barracuda_localization/: zed_localization.py
src/barracuda_localization/launch/: barracuda_localization.launch.py
src/barracuda_navigation/: setup.cfg  setup.py
src/barracuda_navigation/backup/: package.xml.backup  setup.py.backup
src/barracuda_navigation/barracuda_navigation/: goal_bridge.py  hardcoded_nav2_publisher.py  manual_nav_lifecycle_bringup.py  pose_to_odometry.py  replay_tf_bridge.py  simple_costmap_trajectory.py
src/barracuda_navigation/config/: nav2_params.yaml
src/barracuda_navigation/launch/: barracuda_navigation.launch.py  navigation_latest_recording.launch.py
src/barracuda_navigation/resource/: barracuda_navigation
src/barracuda_nvblox/: package.xml  setup.cfg  setup.py
src/barracuda_nvblox/barracuda_nvblox/: pose_to_transform.py
src/barracuda_nvblox/launch/: barracuda_nvblox.launch.py
src/barracuda_nvblox_launch/: package.xml  setup.py
src/barracuda_nvblox_launch/launch/: barracuda_nvblox.launch.py
src/barracuda_onboard/: CMakeLists.txt  README.md  package.xml
src/barracuda_onboard/launch/: barracuda_onboard.launch.py
src/barracuda_ping_360/: CMakeLists.txt  README.md  ROS2_MIGRATION.md  package.xml
src/barracuda_ping_360/barracuda_ping_360/: node.py
src/barracuda_ping_360/launch/: ping360.launch.py
src/barracuda_ping_360/scripts/: ping360_node.py
src/barracuda_thermal_warning/: AGENTS.md  README.md  barracuda_thermal_warning.md  package.xml  pyproject.toml  setup.cfg  setup.py
src/barracuda_thermal_warning/barracuda_thermal_warning/: jetson_thermal_warning.py
src/barracuda_thermal_warning/config/: thermal_params.yaml
src/barracuda_thermal_warning/launch/: barracuda_thermal_warning.launch.py
src/barracuda_thrusters/: README.md  package.xml  setup.cfg  setup.py
src/barracuda_thrusters/barracuda_thrusters/: barracuda_thrusters_jetson.py  force_to_pwm_dc.py  jetson_gpio_utils.py  t200_18v_data.csv  t200_thruster_constants.py  teensy.py  teensy_comms_node.py  teensy_constants.py  teensys.py
src/barracuda_thrusters/barracuda_thrusters/teensy_pwm_output/: arduino-cli_setup.sh  compile.sh  teensy_config.h  teensy_pwm_output.ino  update_teensy_config_header.py
src/barracuda_thrusters/launch/: barracuda_thrusters.launch.py
src/barracuda_trajectory/: CMakeLists.txt  package.xml
src/barracuda_trajectory/include/barracuda_trajectory/: trajectory_generator_node.hpp
src/barracuda_trajectory/launch/: barracuda_trajectory.launch.py  trajectory_generator.launch.py
src/barracuda_trajectory/src/: trajectory_generator.cpp  trajectory_generator_node.cpp
src/barracuda_trajectory/test/: hardcoded_viz_publisher.py
src/vectornav/config/: vectornav.yaml
src/vectornav/launch/: vectornav.launch.py
src/vectornav/vectornav/src/: vn_sensor_msgs.cc
