<package format="3">
  <name>barracuda_localization</name>
  <version>0.0.1</version>
  <description>ZED-based localization for Barracuda AUV: publishes map→odom→base_link TF.</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
