<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>barracuda_nvblox</name>
  <version>0.1.0</version>
  <description>Launch files to run nvblox against Barracuda ZED topics.</description>
  <maintainer email="uscauv@gmail.com">Barracuda</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>isaac_ros_launch_utils</exec_depend>
  <exec_depend>nvblox_ros_python_utils</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
