<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>barracuda_nvblox_launch</name>
  <version>0.1.0</version>
  <description>Launch files to run nvblox against Barracuda ZED topics.</description>
  <maintainer email="uscauv@gmail.com">Barracuda</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>nvblox_ros</exec_depend>
  <exec_depend>barracuda_nvblox</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
